# deal-scout

./: .gcloudignore  .gitignore  README.md  firestore.rules  index.html  package.json  storage.rules  vite.config.ts
.github/workflows/: deploy-api.yml  deploy-rules.yml  deploy-web.yml
apps/api/: .env.example  .gitignore  project.toml  pyproject.toml  requirements.txt
apps/api/app/: auth.py  config.py  firebase_admin_client.py  main.py  om_extractor.py  underwriting.py  xlsx_export.py
apps/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  serve.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Shell.tsx  UnderwritingPanel.tsx
apps/web/src/lib/: api.ts  auth.tsx  firebase.ts  format.ts  workspace.tsx
apps/web/src/pages/: BuildingDetailPage.tsx  BuildingsPage.tsx  ContactDetailPage.tsx  ContactsPage.tsx  DashboardPage.tsx  DealsPage.tsx  IngestPage.tsx  InviteAcceptPage.tsx  LoginPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  UnderwritingPage.tsx
apps/web/src/types/: index.ts
apps/web/src/underwriting/: engine.ts
src/: App.tsx  index.css
