[project]
name = "crm-api"
version = "0.1.0"
description = "Deal Scout CRM backend: FastAPI + Firestore + Gemini vision OM ingestion."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "google-genai>=0.3.0",
    "firebase-admin==6.5.0",
    "google-cloud-firestore==2.19.0",
    "google-cloud-storage==2.18.2",
    "numpy>=2.2.0,<3",
    "pydantic>=2.11.0,<3",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
